WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
175224
Fix typo in WKPreferences _iceCandidateFiltertingEnabled property
https://bugs.webkit.org/show_bug.cgi?id=175224
Summary
Fix typo in WKPreferences _iceCandidateFiltertingEnabled property
Blaze Burg
Reported
2017-08-04 15:52:38 PDT
Oops. Not used internally, just the setter.
Attachments
Patch
(2.95 KB, patch)
2017-08-04 15:53 PDT
,
Blaze Burg
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Blaze Burg
Comment 1
2017-08-04 15:53:30 PDT
Created
attachment 317304
[details]
Patch
WebKit Commit Bot
Comment 2
2017-08-04 16:28:25 PDT
Comment on
attachment 317304
[details]
Patch Clearing flags on attachment: 317304 Committed
r220305
: <
http://trac.webkit.org/changeset/220305
>
WebKit Commit Bot
Comment 3
2017-08-04 16:28:27 PDT
All reviewed patches have been landed. Closing bug.
Radar WebKit Bug Importer
Comment 4
2017-08-04 16:28:50 PDT
<
rdar://problem/33735095
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug