Fix typo in WKPreferences _iceCandidateFiltertingEnabled property https://bugs.webkit.org/show_bug.cgi?id=175224

Reviewed by Tim Horton.

* UIProcess/API/Cocoa/WKPreferences.mm:
(-[WKPreferences _iceCandidateFilteringEnabled]):
(-[WKPreferences _iceCandidateFiltertingEnabled]): Deleted.
* UIProcess/API/Cocoa/WKPreferencesPrivate.h:


Canonical link: https://commits.webkit.org/191961@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@220305 268f45cc-cd09-0410-ab3c-d52691b4dbfc